--- a/app/src/main/res/drawable/mood_progress_bar.xml
+++ b/app/src/main/res/drawable/mood_progress_bar.xml
@@ -27,17 +27,32 @@
         </clip>
     </item>
     <item android:id="@android:id/progress">
-        <clip android:clipOrientation="vertical" android:gravity="bottom">
-            <shape>
-                <corners android:radius="5dip" />
-                <gradient
-                    android:startColor="#ffffd300"
-                    android:centerColor="#ffffb600"
-                    android:centerY="0.75"
-                    android:endColor="#ffffcb00"
-                    android:angle="180"
-                    />
-            </shape>
-        </clip>
+        <layer-list>
+
+            <clip android:clipOrientation="vertical" android:gravity="bottom">
+                <shape>
+                    <corners android:radius="5dip" />
+                    <gradient
+                        android:startColor="#ffffd300"
+                        android:centerColor="#ffffb600"
+                        android:centerY="0.75"
+                        android:endColor="#ffffcb00"
+                        android:angle="180"
+                        />
+                </shape>
+            </clip>
+
+            <item>
+                <shape android:shape="line">
+                    <stroke
+                        android:width="47dp"
+                        android:color="#777"
+                        android:dashWidth="2dp"
+                        android:dashGap="23dp" />
+                </shape>
+            </item>
+        </layer-list>
     </item>
+
+
 </layer-list>
