--- a/app/src/main/res/layout/frg_add_goals.xml
+++ b/app/src/main/res/layout/frg_add_goals.xml
@@ -52,11 +52,28 @@
             android:layout_marginBottom="20dp"
             android:layout_marginTop="20dp" />
 
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp">
+
+            <EditText
+                android:id="@+id/goalCount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/goal_count"
+                android:imeOptions="actionDone"
+                android:inputType="number"
+                android:text="1" />
+        </android.support.design.widget.TextInputLayout>
+
         <Button android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/btn_saveGoal"
             android:layout_gravity="center_vertical"
             android:text="@string/save_goal"
             android:tag="save_button"/>
+
     </LinearLayout>
 </ScrollView>
