--- a/app/src/main/res/layout/goal_row.xml
+++ b/app/src/main/res/layout/goal_row.xml
@@ -3,8 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
-
-
     <LinearLayout
         android:id="@+id/goalDescription"
         android:layout_width="match_parent"
@@ -12,20 +10,17 @@
         android:background="@drawable/small_border"
         android:gravity="center"
         android:orientation="horizontal">
-
         <ImageView
             android:id="@+id/goalImage"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:scaleType="fitXY"
             android:src="@drawable/ic_not_interested" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical">
-
         <TextView
             android:id="@+id/goalName"
             style="@style/InputLabel"
@@ -35,6 +30,14 @@
             android:text="@string/name" />
 
         <TextView
+            android:id="@+id/goalCount"
+            style="@style/InputLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="@string/count" />
+
+        <TextView
             android:id="@+id/goalValid"
             style="@style/InputLabel"
             android:layout_width="wrap_content"
@@ -42,6 +45,5 @@
             android:gravity="center_horizontal"
             android:text="@string/valid_until" />
         </LinearLayout>
-
     </LinearLayout>
 </LinearLayout>
