--- a/app/src/main/res/layout/nav_manage_goals.xml
+++ b/app/src/main/res/layout/nav_manage_goals.xml
@@ -1,316 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_manage_goals"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#f1f1f1"
-    android:orientation="vertical">
-
-    <LinearLayout
-        android:id="@+id/manageGoalsLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/medium_border"
-        android:gravity="center"
+    android:layout_height="match_parent">
+    <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/nav_manage_goals"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#f1f1f1"
         android:orientation="vertical">
-
         <LinearLayout
-            android:id="@+id/manageGoalsShortLayout"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:background="@drawable/medium_border"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <TextView
-                style="@style/InputLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:text="@string/short_goals" />
-
-            <ListView
-                android:id="@+id/shortListview"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"></ListView>
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:id="@+id/manageGoalsMiddleLayout"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:background="@drawable/medium_border"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <TextView
-                style="@style/InputLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:text="@string/medium_goals" />
-
-            <ListView
-                android:id="@+id/middleListview"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"></ListView>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/manageGoalsLongLayout"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:background="@drawable/medium_border"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <TextView
-                style="@style/InputLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:text="@string/long_goals" />
-
-            <ListView
-                android:id="@+id/longListview"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"></ListView>
-        </LinearLayout>
-
-
-        <Button
-            android:id="@+id/manageGoals_AddButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center_vertical"
-            android:imeOptions="actionSend"
-            android:tag="add_goal_button"
-            android:text="@string/add_new_goal" />
-
-    </LinearLayout>
-
-    <!--
-        <LinearLayout
-            android:id="@+id/manageGoalsMediumLayout"
+            android:id="@+id/manageGoalsLayout"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:background="@drawable/medium_border"
+            android:gravity="center"
             android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/mediumTextView"
-                style="@style/InputLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:text="@string/medium_goals" /> />
-
             <LinearLayout
-                android:id="@+id/manageGoalsMediumHolderLayout"
+                android:id="@+id/manageGoalsShortLayout"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="fill_parent"
+                android:background="@drawable/medium_border"
                 android:gravity="center"
                 android:orientation="vertical">
+                <TextView
+                    style="@style/InputLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:text="@string/short_goals" />
+                <ListView
+                    android:id="@+id/shortListview"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"></ListView>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/manageGoalsMiddleLayout"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:background="@drawable/medium_border"
+                android:gravity="center"
+                android:orientation="vertical">
+                <TextView
+                    style="@style/InputLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:text="@string/medium_goals" />
 
-                <LinearLayout
-                    android:id="@+id/mediumGoal0"
-                    android:layout_width="match_parent"
-                    android:layout_height="fill_parent"
-                    android:background="@drawable/small_border"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/mediumGoal0Image"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/ic_not_interested" />
-
-                    <TextView
-                        android:id="@+id/mediumGoal0Name"
-                        style="@style/InputLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:text="@string/name" />
-
-                    <TextView
-                        android:id="@+id/mediumGoal0Valid"
-                        style="@style/InputLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:text="@string/valid_until" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/mediumGoal1"
-                    android:layout_width="match_parent"
-                    android:layout_height="fill_parent"
-                    android:background="@drawable/small_border"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/mediumGoal1Image"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/ic_not_interested" />
-
-                    <TextView
-                        android:id="@+id/mediumGoal1Name"
-                        style="@style/InputLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:text="@string/name" />
-
-                    <TextView
-                        android:id="@+id/mediumGoal1Valid"
-                        style="@style/InputLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:text="@string/valid_until" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/mediumGoal2"
-                    android:layout_width="match_parent"
-                    android:layout_height="fill_parent"
-                    android:background="@drawable/small_border"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/mediumGoal2Image"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/ic_not_interested" />
-
-                    <TextView
-                        android:id="@+id/mediumGoal2Name"
-                        style="@style/InputLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:text="@string/name" />
-
-                    <TextView
-                        android:id="@+id/mediumGoal2Valid"
-                        style="@style/InputLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:text="@string/valid_until" />
-                </LinearLayout>
+                <ListView
+                    android:id="@+id/middleListview"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content">
+                </ListView>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/manageGoalsLongLayout"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:background="@drawable/medium_border"
+                android:gravity="center"
+                android:orientation="vertical">
+                <TextView
+                    style="@style/InputLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:text="@string/long_goals" />
+                <ListView
+                    android:id="@+id/longListview"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content">
+                </ListView>
             </LinearLayout>
         </LinearLayout>
-
-
-        <LinearLayout
-            android:id="@+id/manageGoalsLongLayout"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:background="@drawable/medium_border"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/longTextView"
-                style="@style/InputLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:text="@string/long_goals" />
-
-            <LinearLayout
-                android:id="@+id/manageGoalsLongHolderLayout"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:id="@+id/longGoal0"
-                    android:layout_width="match_parent"
-                    android:layout_height="fill_parent"
-                    android:background="@drawable/small_border"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/longGoal0Image"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/ic_not_interested" />
-
-                    <TextView
-                        android:id="@+id/longGoal0Name"
-                        style="@style/InputLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:text="@string/name" />
-
-                    <TextView
-                        android:id="@+id/longGoal0Valid"
-                        style="@style/InputLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:text="@string/valid_until" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/longGoal1"
-                    android:layout_width="match_parent"
-                    android:layout_height="fill_parent"
-                    android:background="@drawable/small_border"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/longGoal1Image"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/ic_not_interested" />
-
-                    <TextView
-                        android:id="@+id/longGoal1Name"
-                        style="@style/InputLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:text="@string/name" />
-
-                    <TextView
-                        android:id="@+id/longGoal1Valid"
-                        style="@style/InputLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:text="@string/valid_until" />
-                </LinearLayout>
-
-
-
-                -->
-
-
-</LinearLayout>
-</ScrollView>
+    </LinearLayout>
+    </ScrollView>
+    <Button
+        android:id="@+id/manageGoals_AddButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_vertical"
+        android:tag="add_goal_button"
+        android:text="@string/add_new_goal"
+        android:layout_alignParentBottom="true"/>
+</RelativeLayout>
